--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ body .header {
   height: 100px;
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
 }
 body .header .logSocial {
   display: flex;
@@ -84,6 +85,11 @@ body .header .nav div a {
   color: white;
   text-decoration: none;
   font-size: 18px;
+  width: 10vw;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 body .header .nav div:hover {
   background-color: brown;
@@ -105,55 +111,57 @@ body .accessBlog .blog {
   justify-content: center;
   align-self: center;
   width: 70%;
-  height: 600px;
+  height: 650px;
 }
 body .accessBlog .blog .savoir {
   display: flex;
   flex-direction: row;
   column-gap: 5%;
   width: 100%;
-  height: 40%;
-  margin-top: 15%;
+  height: 45%;
+  margin-top: 16%;
 }
 body .accessBlog .blog .savoir .S {
   flex: 1;
   display: flex;
   flex-direction: column;
-  justify-content: baseline;
-  row-gap: 5%;
+  justify-content: space-between;
+  margin: 10px 0;
   text-align: left;
   width: 100%;
-  height: 100%;
-  background-size: contain;
+  height: 80%;
+  background-size: cover;
+  background-position: center;
   background-repeat: no-repeat;
   border-top: 2px solid #ff8800;
 }
 body .accessBlog .blog .savoir .S p {
-  margin: 0 20px 0;
+  margin: 0 0 0 20px;
   color: white;
 }
 body .accessBlog .blog .savoir .S p:nth-of-type(1) {
   font-size: 34px;
   font-weight: 600;
   margin-top: 10px;
+  justify-self: flex-start;
 }
 body .accessBlog .blog .savoir .S p:nth-of-type(2) {
-  width: 60%;
+  width: 80%;
   font-size: 16px;
 }
 body .accessBlog .blog .savoir .S div {
-  width: 120px;
-  height: 30px;
-  margin: 10px 0 0 20px;
-  background-color: #ff8800;
+  margin: 0 0 20px 20px;
+}
+body .accessBlog .blog .savoir .S div a {
   display: flex;
   align-items: center;
   justify-content: center;
-}
-body .accessBlog .blog .savoir .S div a {
+  width: 120px;
+  height: 30px;
   font-size: 18px;
   text-decoration: none;
   color: white;
+  background-color: #ff8800;
 }
 body .accessBlog .blog .savoir .S1 {
   background-image: url('img/barefoot.jpg');
@@ -171,15 +179,12 @@ body .accessBlog .blog .citationBlog {
   margin-bottom: 30px;
   line-height: 150%;
   color: #616161;
+  hyphens: auto;
 }
 body .accessBlog .blog :nth-child(4) {
-  width: 200px;
-  height: 30px;
   background-color: #502f0a;
   display: flex;
   align-self: center;
-  align-items: center;
-  justify-content: center;
 }
 body .accessBlog .blog :nth-child(4) a {
   font-size: 16px;
@@ -187,6 +192,11 @@ body .accessBlog .blog :nth-child(4) a {
   text-decoration: none;
   text-transform: uppercase;
   color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 200px;
+  height: 30px;
 }
 body .promotion {
   width: 100%;
@@ -215,4 +225,366 @@ body .promotion .firstLine {
 body .promotion .lastWord {
   font-family: 'Courier New', Courier, monospace;
   text-transform: lowercase;
+}
+body .promotion :nth-child(3) {
+  background-color: #502f0a;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+body .promotion :nth-child(3) a {
+  font-size: 25px;
+  font-weight: 600;
+  text-decoration: none;
+  text-transform: uppercase;
+  color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 250px;
+  height: 40px;
+}
+body .club {
+  width: 100%;
+  height: 600px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+body .club .techLogo {
+  width: 120px;
+  height: 120px;
+  background-image: url('img/tachometer.png');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: contain;
+  align-self: center;
+  margin-bottom: 25px;
+}
+body .club .citationClub {
+  font-size: 18px;
+  letter-spacing: 1px;
+  margin-bottom: 30px;
+  line-height: 200%;
+  color: #616161;
+}
+body .club .citationClub::first-line {
+  color: #ff8800;
+  font-size: 30px;
+  font-weight: 600;
+}
+body .club :nth-child(3) {
+  width: 70%;
+  height: 50%;
+  margin: 0 40px;
+  display: flex;
+  flex-direction: row;
+}
+body .club :nth-child(3) .article {
+  flex: 1;
+  height: 70%;
+  display: flex;
+  flex-direction: column;
+}
+body .club :nth-child(3) .article p {
+  width: 90%;
+  height: 100%;
+  font-size: 16px;
+  letter-spacing: 1px;
+  color: black;
+  text-align: left;
+}
+body .club :nth-child(3) .article :nth-child(2) {
+  width: 120px;
+  height: 30px;
+  padding: 5px 0;
+  background-color: #ff8800;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+body .club :nth-child(3) .article :nth-child(2) a {
+  font-size: 18px;
+  text-decoration: none;
+  color: white;
+  width: 120px;
+  height: 30px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+body .avantage {
+  width: 100%;
+  height: 400px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  text-align: left;
+  column-gap: 4%;
+  background-image: url('img/bg_sav.jpg');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  padding: 0 20%;
+}
+body .avantage .avantageBox {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  row-gap: 5%;
+  flex: 1;
+  height: 60%;
+  background-color: lightgray;
+  border-radius: 5%;
+  padding-left: 20px;
+}
+body .avantage .avantageBox .av1 {
+  background-image: url('img/truck.png');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: contain;
+  width: 60px;
+  height: 60px;
+}
+body .avantage .avantageBox .av2 {
+  background-image: url('img/good.png');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: contain;
+  width: 60px;
+  height: 60px;
+}
+body .avantage .avantageBox .av3 {
+  background-image: url('img/warning.png');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: contain;
+  width: 60px;
+  height: 60px;
+}
+body .avantage .avantageBox p {
+  font-size: 18px;
+  font-weight: 600;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+body .avantage .avantageBox .lien {
+  display: flex;
+  align-items: center;
+  padding-left: 0;
+  margin: 10px 0;
+}
+body .avantage .avantageBox .lien a {
+  font-size: 16px;
+  text-decoration: none;
+  color: white;
+  width: 110px;
+  height: 35px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #ff8800;
+}
+body .successOfMonth {
+  width: 100%;
+  height: 450px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 60px;
+}
+body .successOfMonth h2 {
+  color: #ff8800;
+  font-size: 30px;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+body .successOfMonth .citationSuccess {
+  margin-top: 10px;
+  font-size: 18px;
+  letter-spacing: 1px;
+  margin-bottom: 30px;
+  line-height: 200%;
+  color: #616161;
+}
+body .successOfMonth :nth-child(3) {
+  display: flex;
+  flex-direction: row;
+  align-items: baseline;
+  column-gap: 5%;
+  width: 70%;
+  height: auto;
+  text-align: left;
+}
+body .successOfMonth :nth-child(3) p {
+  flex: 1;
+  font-size: 16px;
+  hyphens: auto;
+  line-height: 24px;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+body .footer {
+  width: 100%;
+  height: 200px;
+  display: flex;
+  flex-direction: column;
+  align-self: self-start;
+  justify-content: center;
+  text-align: left;
+  padding-left: 190px;
+  background-color: #2c2c2c;
+  color: white;
+}
+body .footer .contact {
+  display: flex;
+  flex-direction: row;
+  column-gap: 10%;
+  margin-bottom: 20px;
+}
+body .footer .contact .ultLogoFooter {
+  width: 150px;
+  height: 100%;
+  background-image: url('img/logo_footer.png');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: contain;
+}
+body .footer .contact p {
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+body .footer .contact span {
+  color: #ff8800;
+}
+@media screen and (max-width: 420px) {
+  body .header .logoSocial .social {
+    column-gap: 1%;
+  }
+  body .header .logoSocial .social a {
+    width: 20%;
+  }
+  body .header .nav {
+    justify-content: space-around;
+    padding-right: 5px;
+  }
+  body .header .nav div a {
+    font-size: 14px;
+  }
+  body .accessBlog {
+    height: 650px;
+  }
+  body .accessBlog .blog {
+    width: 90%;
+  }
+  body .accessBlog .blog .savoir .S p {
+    margin: 0 0 0 10px;
+  }
+  body .accessBlog .blog .savoir .S p:nth-of-type(1) {
+    font-size: 22px;
+  }
+  body .accessBlog .blog .savoir .S p:nth-of-type(2) {
+    width: 90%;
+    font-size: 14px;
+  }
+  body .accessBlog .blog .savoir .S div a {
+    font-size: 14px;
+  }
+  body .accessBlog .blog h1 {
+    margin: 0 0 10px;
+  }
+  body .accessBlog .blog .citationBlog {
+    font-size: 14px;
+  }
+  body .promotion {
+    padding: 40px;
+  }
+  body .promotion p:nth-of-type(2) {
+    font-size: 60px;
+  }
+  body .promotion .lastWord {
+    font-size: 45px;
+  }
+  body .promotion :nth-child(3) {
+    height: 55px;
+    margin-top: 50px;
+  }
+  body .club {
+    height: 700px;
+  }
+  body .club .techLogo {
+    width: 90px;
+    height: 90px;
+  }
+  body .club .citationClub {
+    font-size: 14px;
+  }
+  body .club .citationClub::first-line {
+    font-size: 20px;
+  }
+  body .club :nth-child(3) {
+    width: 90%;
+    margin: 0;
+  }
+  body .club :nth-child(3) .article {
+    row-gap: 20%;
+    justify-content: space-between;
+  }
+  body .club :nth-child(3) .article p {
+    width: 95%;
+    font-size: 14px;
+  }
+  body .avantage {
+    flex-direction: column;
+    row-gap: 8%;
+    padding: 0;
+  }
+  body .avantage .avantageBox {
+    flex: 0;
+    width: 70%;
+    height: 100%;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    column-gap: 2%;
+    padding-left: 10px;
+    border-radius: 2%;
+  }
+  body .avantage .avantageBox .av1 {
+    width: 40px;
+    height: 100px;
+  }
+  body .avantage .avantageBox .av2 {
+    width: 40px;
+    height: 100px;
+  }
+  body .avantage .avantageBox .av3 {
+    width: 40px;
+    height: 100px;
+  }
+  body .avantage .avantageBox p {
+    font-size: 14px;
+  }
+  body .avantage .avantageBox .lien a {
+    font-size: 14px;
+    height: 30px;
+    width: 90px;
+  }
+  body .successOfMonth {
+    height: 1000px;
+  }
+  body .successOfMonth h2 {
+    font-size: 25px;
+  }
+  body .successOfMonth .citationSuccess {
+    font-size: 16px;
+    margin: 10px 5px 30px 5px;
+  }
+  body .footer {
+    padding-left: 20px;
+  }
+  body .footer p {
+    font-size: 14px;
+  }
+  body .footer .contact p {
+    font-size: 14px;
+  }
 }
