--- a/style.less
+++ b/style.less
@@ -483,8 +483,9 @@ body{
                 justify-content: space-around;
                 padding-right: 5px;
                 div{
+                    width: 20vw;
                     a{
-                        font-size: 14px;
+                        font-size: 12px;
                     }
                 }
             }
@@ -569,7 +570,7 @@ body{
 
             .avantageBox{
                 flex: 0;
-                width: 70%;
+                width: 80%;
                 height: 100%;
                 flex-direction: row;
                 justify-content: space-around;
@@ -610,6 +611,9 @@ body{
                 font-size: 16px;
                 margin: 10px 5px 30px 5px;
             }
+            :nth-child(3){
+                flex-direction: column;
+                }
         }
         .footer{
             padding-left: 20px;
