--- a/style.css
+++ b/style.css
@@ -489,7 +489,7 @@ body .footer .contact span {
     font-size: 14px;
   }
   body .accessBlog .blog .savoir .S div a {
-    font-size: 14px;
+    font-size: 12px;
   }
   body .accessBlog .blog h1 {
     margin: 0 0 10px;
@@ -524,16 +524,25 @@ body .footer .contact span {
     font-size: 20px;
   }
   body .club :nth-child(3) {
-    width: 90%;
+    width: 95%;
     margin: 0;
   }
   body .club :nth-child(3) .article {
     row-gap: 20%;
     justify-content: space-between;
+    height: 85%;
   }
   body .club :nth-child(3) .article p {
     width: 95%;
-    font-size: 14px;
+    height: 60%;
+    font-size: 12px;
+  }
+  body .club :nth-child(3) .article :nth-child(2) {
+    padding: 0;
+    margin-top: 10px;
+  }
+  body .club :nth-child(3) .article :nth-child(2) a {
+    font-size: 12px;
   }
   body .avantage {
     flex-direction: column;
@@ -567,7 +576,7 @@ body .footer .contact span {
     font-size: 14px;
   }
   body .avantage .avantageBox .lien a {
-    font-size: 14px;
+    font-size: 12px;
     height: 30px;
     width: 90px;
   }
