--- a/style.less
+++ b/style.less
@@ -509,7 +509,7 @@ body{
                         }
                         div{
                             a{
-                                font-size: 14px;
+                                font-size: 12px;
                             }
                         }
                     }
@@ -551,14 +551,23 @@ body{
                 font-size: 20px;
             }
             :nth-child(3){
-                width: 90%;
+                width: 95%;
                 margin: 0;
                 .article{
                     row-gap: 20%;
                     justify-content: space-between;
+                    height: 85%;
                     p{
                     width: 95%;
-                    font-size: 14px;
+                    height: 60%;
+                    font-size: 12px;
+                    }
+                    :nth-child(2){
+                        padding: 0;
+                        margin-top: 10px;
+                        a{
+                            font-size: 12px;
+                        }
                     }
                 }
             }
@@ -595,7 +604,7 @@ body{
                 }
                 .lien{
                     a{
-                        font-size: 14px;
+                        font-size: 12px;
                         height: 30px;
                         width: 90px;
                     }
